welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value biscuit
	if (estSurBiscuit) {biscuit = biscuit+1}
                            ^RunHalf:4: error: not found: value orange
	if (estSurOrange) {orange = orange+1}
                           ^